--- a/devia-core/pom.xml
+++ b/devia-core/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+        </dependency>
+
  <!--       <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
